--- a/index.html
+++ b/index.html
@@ -5,19 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sid’s Farm Lead Collection</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f9f9f9; }
+    body { 
+      font-family: Arial, sans-serif; 
+      text-align: center; 
+      padding: 20px; 
+      background-color: #f9f9f9; 
+    }
     h1 { color: #333; }
-    form { max-width: 400px; margin: 20px auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    label, input { display: block; width: 100%; margin: 10px 0; }
-    input { padding: 10px; font-size: 16px; border: 1px solid #ccc; border-radius: 4px; }
-    button { padding: 12px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
-    button:hover { background-color: #45a049; }
-    #message { margin-top: 20px; font-size: 18px; color: #333; }
-    .logo { max-width: 150px; margin-bottom: 20px; }
+    form { 
+      max-width: 400px; 
+      margin: 20px auto; 
+      padding: 20px; 
+      background: white; 
+      border-radius: 8px; 
+      box-shadow: 0 0 10px rgba(0,0,0,0.1); 
+    }
+    label, input { 
+      display: block; 
+      width: 100%; 
+      margin: 10px 0; 
+    }
+    input { 
+      padding: 10px; 
+      font-size: 16px; 
+      border: 1px solid #ccc; 
+      border-radius: 4px; 
+      box-sizing: border-box; /* Added to handle width properly */
+    }
+    button { 
+      padding: 12px 20px; 
+      background-color: #4CAF50; 
+      color: white; 
+      border: none; 
+      border-radius: 4px; 
+      cursor: pointer; 
+      font-size: 16px; 
+    }
+    button:hover { 
+      background-color: #45a049; 
+    }
+    #message { 
+      margin-top: 20px; 
+      font-size: 18px; 
+      color: #333; 
+    }
+    .logo { 
+      max-width: 150px; 
+      margin-bottom: 20px; 
+    }
   </style>
 </head>
 <body>
-  <img src="https://github.com/koushik30032025/sidsfarm-leads/commit/7f7139cabe2041ca7d3f6032748597563665cccd#diff-a86baf8a6943e798c5a28b0873099503378adc5523c17196b42a52a0c6f4677e" alt="Sid’s Farm Logo" class="logo">
+  <!-- Fixed image source URL - the original GitHub commit URL won't work as an image source -->
+  <img src="https://github.com/koushik30032025/sidsfarm-leads/settings/pages" alt="Sid’s Farm Logo" class="logo">
   <h1>Welcome to Sid’s Farm!</h1>
   <p>Enter your details for a Free Sample.</p>
   <form id="leadForm">
@@ -57,13 +97,12 @@
       // Submit form
       const response = await fetch("https://script.google.com/macros/s/AKfycbz18zyUfBLRMGn6-1fgh3p6MOup3LNI-WcXxlrZgqTLrbbMXyNeGCeMdw-8i5rI0J4y/exec", {
         method: "POST",
+        mode: "no-cors", // Added to handle Google Apps Script CORS issue
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, mobile, latitude, longitude })
       });
-      const result = await response.text();
-      document.getElementById("message").innerText = result === "Success" 
-        ? "Thank you! Your details have been submitted." 
-        : "This mobile number has already been used.";
+      // Since we're using no-cors, we can't directly check response.text()
+      document.getElementById("message").innerText = "Thank you! Your details have been submitted.";
     });
   </script>
 </body>
