--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <!-- Fixed image source URL - the original GitHub commit URL won't work as an image source -->
- <img src="https://github.com/koushik30032025/sidsfarm-leads/commit/7f7139cabe..." class="logo">
+ <img src="https://github.com/koushik30032025/sidsfarm-leads/blob/eeb7f349f4063803226a516a46be21823af930c1/Untitled-design-87.jpg" class="logo">
   <h1>Welcome to Sid’s Farm!</h1>
   <p>Enter your details for a Free Sample.</p>
   <form id="leadForm">
