--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <!-- Fixed image source URL - the original GitHub commit URL won't work as an image source -->
- <img src="image-removebg-preview (1).png" class="logo">
+ <img src="https://github.dev/koushik30032025/sidsfarm-leads/blob/main/image-removebg-preview%20(1).png" class="logo">
   <h1>Welcome to Sid’s Farm!</h1>
   <p>Enter your details for a Free Sample.</p>
   <form id="leadForm">
