--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 </head>
 <body>
   <!-- Fixed image source URL - the original GitHub commit URL won't work as an image source -->
-  <img src="https://raw.githubusercontent.com/koushik30032025/sidsfarm-leads/main/sidsfarm-logo.png"alt="Sid’s Farm Logo" class="logo">
+  <img src="https://raw.githubusercontent.com/koushik30032025/sidsfarm-leads/main/sidsfarm-logo.png" 
+     alt="Sid’s Farm Logo" 
+     class="logo">
   <h1>Welcome to Sid’s Farm!</h1>
   <p>Enter your details for a Free Sample.</p>
   <form id="leadForm">
