--- a/index.html
+++ b/index.html
@@ -1,126 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sid’s Farm Lead Collection</title>
-  <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      text-align: center; 
-      padding: 20px; 
-      background-color: #f9f9f9; 
-    }
-    h1 { color: #333; }
-    form { 
-      max-width: 400px; 
-      margin: 20px auto; 
-      padding: 20px; 
-      background: white; 
-      border-radius: 8px; 
-      box-shadow: 0 0 10px rgba(0,0,0,0.1); 
-    }
-    label, input { 
-      display: block; 
-      width: 100%; 
-      margin: 10px 0; 
-    }
-    input { 
-      padding: 10px; 
-      font-size: 16px; 
-      border: 1px solid #ccc; 
-      border-radius: 4px; 
-      box-sizing: border-box; /* Added to handle width properly */
-    }
-    button { 
-      padding: 12px 20px; 
-      background-color: #4CAF50; 
-      color: white; 
-      border: none; 
-      border-radius: 4px; 
-      cursor: pointer; 
-      font-size: 16px; 
-    }
-    button:hover { 
-      background-color: #45a049; 
-    }
-    #message { 
-      margin-top: 20px; 
-      font-size: 18px; 
-      color: #333; 
-    }
-    .logo { 
-      max-width: 150px; 
-      margin-bottom: 20px; 
-    }
-  </style>
-</head>
-<body>
-  <!-- Fixed image source URL - the original GitHub commit URL won't work as an image source -->
-  <img src="https://raw.githubusercontent.com/koushik30032025/sidsfarm-leads/main/sidsfarm-logo.png" 
-     alt="Sid’s Farm Logo" 
-     class="logo">
-  <h1>Welcome to Sid’s Farm!</h1>
-  <p>Enter your details for a Free Sample.</p>
-  <form id="leadForm">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="mobile">Mobile Number (10 digits):</label>
-    <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
-    <input type="hidden" id="latitude" name="latitude">
-    <input type="hidden" id="longitude" name="longitude">
-    <button type="submit">Submit</button>
-  </form>
-  <div id="message"></div>
-  <script>
+<script>
     document.getElementById("leadForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const name = document.getElementById("name").value;
-      const mobile = document.getElementById("mobile").value;
-      let latitude = "N/A";
-      let longitude = "N/A";
+      const submitButton = e.target.querySelector('button[type="submit"]');
+      submitButton.disabled = true; // Disable button to prevent double-clicks
 
-      // Attempt to get location
-      if (navigator.geolocation) {
-        try {
-          const position = await new Promise((resolve, reject) => {
-            navigator.geolocation.getCurrentPosition(resolve, reject);
-          });
-          latitude = position.coords.latitude;
-          longitude = position.coords.longitude;
-        } catch (error) {
-          console.log("Location access denied or unavailable");
+      try {
+        // Clean the mobile number input (remove non-digits)
+        const mobileInput = document.getElementById("mobile");
+        mobileInput.value = mobileInput.value.replace(/\D/g, '').trim();
+
+        const name = document.getElementById("name").value;
+        const mobile = mobileInput.value;
+        let latitude = "N/A";
+        let longitude = "N/A";
+
+        // Attempt to get location
+        if (navigator.geolocation) {
+          try {
+            const position = await new Promise((resolve, reject) => {
+              navigator.geolocation.getCurrentPosition(resolve, reject);
+            });
+            latitude = position.coords.latitude;
+            longitude = position.coords.longitude;
+          } catch (error) {
+            console.log("Location access denied or unavailable");
+          }
         }
+
+        document.getElementById("latitude").value = latitude;
+        document.getElementById("longitude").value = longitude;
+
+        // Submit form
+        const response = await fetch("https://script.google.com/macros/s/AKfycbz18zyUfBLRMGn6-1fgh3p6MOup3LNI-WcXxlrZgqTLrbbMXyNeGCeMdw-8i5rI0J4y/exec", {
+          method: "POST",
+          mode: "no-cors",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ name, mobile, latitude, longitude })
+        });
+
+        document.getElementById("message").innerText = "Thank you! Your details have been submitted.";
+        
+      } catch (error) {
+        console.error("Submission error:", error);
+        document.getElementById("message").innerText = "Error submitting details. Please try again.";
+      } finally {
+        submitButton.disabled = false; // Re-enable button after processing
       }
-
-      document.getElementById("latitude").value = latitude;
-      document.getElementById("longitude").value = longitude;
-
-      // Submit form
-      const response = await fetch("https://script.google.com/macros/s/AKfycbz18zyUfBLRMGn6-1fgh3p6MOup3LNI-WcXxlrZgqTLrbbMXyNeGCeMdw-8i5rI0J4y/exec", {
-        method: "POST",
-        mode: "no-cors", // Added to handle Google Apps Script CORS issue
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ name, mobile, latitude, longitude })
-      });
-          document.getElementById("leadForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const submitButton = e.target.querySelector('button[type="submit"]');
-  submitButton.disabled = true; // Disable button to prevent double-clicks
-
-  // Clean the mobile number input (remove non-digits)
-  const mobileInput = document.getElementById("mobile");
-  mobileInput.value = mobileInput.value.replace(/\D/g, '').trim();
-
-  // Rest of your code (location fetch, form submission)...
-
-  submitButton.disabled = false; // Re-enable button after processing
-      // Since we're using no-cors, we can't directly check response.text()
-      document.getElementById("message").innerText = "Thank you! Your details have been submitted.";
     });
-
-});
-  </script>
-</body>
-</html>
-
+</script>
