--- a/index.html
+++ b/index.html
@@ -1,50 +1,49 @@
 <script>
-    document.getElementById("leadForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const submitButton = e.target.querySelector('button[type="submit"]');
-      submitButton.disabled = true; // Disable button to prevent double-clicks
+document.getElementById("leadForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const submitButton = e.target.querySelector('button[type="submit"]');
+  submitButton.disabled = true; // Disable button to prevent double-clicks
 
+  try {
+    // Clean the mobile number input (remove non-digits)
+    const mobileInput = document.getElementById("mobile");
+    mobileInput.value = mobileInput.value.replace(/\D/g, "").trim(); // NEW: Sanitization
+
+    const name = document.getElementById("name").value;
+    const mobile = mobileInput.value; // Use the sanitized value
+    let latitude = "N/A";
+    let longitude = "N/A";
+
+    // Geolocation logic (existing code)
+    if (navigator.geolocation) {
       try {
-        // Clean the mobile number input (remove non-digits)
-        const mobileInput = document.getElementById("mobile");
-        mobileInput.value = mobileInput.value.replace(/\D/g, '').trim();
-
-        const name = document.getElementById("name").value;
-        const mobile = mobileInput.value;
-        let latitude = "N/A";
-        let longitude = "N/A";
-
-        // Attempt to get location
-        if (navigator.geolocation) {
-          try {
-            const position = await new Promise((resolve, reject) => {
-              navigator.geolocation.getCurrentPosition(resolve, reject);
-            });
-            latitude = position.coords.latitude;
-            longitude = position.coords.longitude;
-          } catch (error) {
-            console.log("Location access denied or unavailable");
-          }
-        }
-
-        document.getElementById("latitude").value = latitude;
-        document.getElementById("longitude").value = longitude;
-
-        // Submit form
-        const response = await fetch("https://script.google.com/macros/s/AKfycbz18zyUfBLRMGn6-1fgh3p6MOup3LNI-WcXxlrZgqTLrbbMXyNeGCeMdw-8i5rI0J4y/exec", {
-          method: "POST",
-          mode: "no-cors",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, mobile, latitude, longitude })
+        const position = await new Promise((resolve, reject) => {
+          navigator.geolocation.getCurrentPosition(resolve, reject);
         });
-
-        document.getElementById("message").innerText = "Thank you! Your details have been submitted.";
-        
+        latitude = position.coords.latitude;
+        longitude = position.coords.longitude;
       } catch (error) {
-        console.error("Submission error:", error);
-        document.getElementById("message").innerText = "Error submitting details. Please try again.";
-      } finally {
-        submitButton.disabled = false; // Re-enable button after processing
+        console.log("Location access denied");
       }
+    }
+
+    // Form submission (existing code)
+    const response = await fetch("https://script.google.com/macros/s/AKfycbz18zyUfBLRMGn6-1fgh3p6MOup3LNI-WcXxlrZgqTLrbbMXyNeGCeMdw-8i5rI0J4y/exec", {
+      method: "POST",
+      mode: "no-cors",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ name, mobile, latitude, longitude })
     });
+
+    // Success message (existing code)
+    document.getElementById("message").innerText = "Thank you! Your details have been submitted.";
+
+  } catch (error) {
+    // Error handling (optional)
+    console.error("Error:", error);
+    document.getElementById("message").innerText = "Submission failed. Please try again.";
+  } finally {
+    submitButton.disabled = false; // Re-enable button
+  }
+});
 </script>
