--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         errorBox.classList.add("visible");
         setTimeout(() => {
           errorBox.classList.remove("visible");
-          overlay.style.display = "none";
+          overlay.style.display = "none");
         }, 2500);
       }
     });
