--- a/index.html
+++ b/index.html
@@ -9,116 +9,74 @@
       font-family: 'Arial', sans-serif;
       text-align: center;
       padding: 20px;
-      background: linear-gradient(135deg, #e6f3e6, #ffffff);
-      margin: 0;
-      overflow: hidden;
+      background: #f0f0f0;
+    }
+    .logo {
+      max-width: 200px;
+      margin-bottom: 20px;
     }
     h1 {
-      color: #2e7d32;
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-    p {
-      color: #555;
-      font-size: 16px;
+      color: #4CAF50;
     }
     form {
       max-width: 400px;
-      margin: 20px auto;
-      padding: 25px;
+      margin: 0 auto;
+      padding: 20px;
       background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      border: 3px solid #4CAF50;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     label {
       display: block;
-      text-align: left;
       margin: 10px 0 5px;
-      color: #333;
-      font-weight: bold;
+      text-align: left;
     }
     input {
       width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border: 1px solid #4CAF50;
-      border-radius: 6px;
-      box-sizing: border-box;
-    }
-    input:focus {
-      outline: none;
-      border-color: #2e7d32;
-      box-shadow: 0 0 5px rgba(46, 125, 50, 0.5);
-    }
-    .optional::after {
-      content: " (Optional)";
-      font-weight: normal;
-      color: #888;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
     button {
       width: 100%;
-      padding: 14px;
-      background-color: #4CAF50;
+      padding: 10px;
+      background: #4CAF50;
       color: white;
       border: none;
-      border-radius: 6px;
-      font-size: 18px;
+      border-radius: 5px;
       cursor: pointer;
       margin-top: 20px;
     }
-    button:hover {
-      background-color: #45a049;
-    }
-    .logo {
-      max-width: 160px;
-      margin-bottom: 20px;
-    }
-    .cow {
-      max-width: 60px;
-      position: absolute;
-      top: 15px;
-      right: 15px;
-      opacity: 0.8;
-    }
-    .success-box {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      border: 2px solid #4CAF50;
-    }
-    .success-tick {
-      font-size: 60px;
-      color: #4CAF50;
-      margin-bottom: 10px;
-    }
-    .success-text {
-      font-size: 22px;
-      color: #333;
-    }
-    .error-box {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #f44336;
-      color: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    #loading {
       font-size: 18px;
+      color: #4CAF50;
+      margin-top: 20px;
+      display: none;
+    }
+    #loading .dots {
+      display: inline-block;
+      width: 20px;
+      text-align: left;
+    }
+    #loading .dots::after {
+      content: "...";
+      animation: dots 1.5s infinite;
+    }
+    @keyframes dots {
+      0% { content: ""; }
+      33% { content: "."; }
+      66% { content: ".."; }
+      100% { content: "..."; }
+    }
+    #message {
+      font-size: 24px;
+      color: #4CAF50;
+      margin-top: 20px;
+      display: none;
     }
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/koushik30032025/sidsfarm-leads/main/milk.png" alt="Cow Graphic" class="cow">
   <img src="https://raw.githubusercontent.com/koushik30032025/sidsfarm-leads/main/sidsfarm-logo.png" alt="Sid’s Farm Logo" class="logo">
   <h1>Welcome to Sid’s Farm!</h1>
   <p>Fill in your details for a free milk sample.</p>
@@ -129,69 +87,42 @@
     <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
     <label for="community">Community Name *</label>
     <input type="text" id="community" name="community" required>
-    <label for="dob" class="optional">Date of Birth</label>
+    <label for="dob">Date of Birth (Optional)</label>
     <input type="date" id="dob" name="dob">
-    <input type="hidden" id="latitude" name="latitude">
-    <input type="hidden" id="longitude" name="longitude">
     <button type="submit">Submit</button>
   </form>
-  <div id="successBox" class="success-box">
-    <div class="success-tick">✓</div>
-    <div class="success-text">Thank You for Your Interest in Sid’s Farm!<br>Visit Again!</div>
-  </div>
-  <div id="errorBox" class="error-box"></div>
+  <div id="loading">Submitting<span class="dots"></span></div>
+  <div id="message"></div>
   <script>
     document.getElementById("leadForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-
-      // Get form values
-      const name = document.getElementById("name").value;
-      const mobile = document.getElementById("mobile").value;
-      const community = document.getElementById("community").value;
-      const dob = document.getElementById("dob").value;
-      let latitude = "N/A";
-      let longitude = "N/A";
-
-      // Attempt to capture geolocation
-      if (navigator.geolocation) {
-        try {
-          const position = await new Promise((resolve, reject) => {
-            navigator.geolocation.getCurrentPosition(resolve, reject);
-          });
-          latitude = position.coords.latitude;
-          longitude = position.coords.longitude;
-        } catch (error) {
-          console.log("Geolocation access denied or unavailable");
+      document.getElementById("loading").style.display = "block";
+      const formData = {
+        name: document.getElementById("name").value,
+        mobile: document.getElementById("mobile").value,
+        community: document.getElementById("community").value,
+        dob: document.getElementById("dob").value || "N/A",
+        latitude: "N/A",
+        longitude: "N/A"
+      };
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbyJSBY1Z8RqKxOoPR8yHEY3QtsdTrcyC8DglbvKd3hBbb_9-9-EPQE1rAnDASy0GLcF/exec", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(formData)
+        });
+        const result = await response.text();
+        document.getElementById("loading").style.display = "none";
+        if (result === "Success") {
+          document.getElementById("leadForm").style.display = "none";
+          document.getElementById("message").innerText = "THANK YOU";
+          document.getElementById("message").style.display = "block";
+        } else {
+          alert("Error: " + result);
         }
-      }
-
-      // Set hidden fields
-      document.getElementById("latitude").value = latitude;
-      document.getElementById("longitude").value = longitude;
-
-      // Send data to Google Apps Script
-      const response = await fetch("https://script.google.com/macros/s/AKfycbyJSBY1Z8RqKxOoPR8yHEY3QtsdTrcyC8DglbvKd3hBbb_9-9-EPQE1rAnDASy0GLcF/exec", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ name, mobile, community, dob, latitude, longitude })
-      });
-      const result = await response.text();
-
-      // Handle response
-      const successBox = document.getElementById("successBox");
-      const errorBox = document.getElementById("errorBox");
-      const form = document.getElementById("leadForm");
-
-      if (result === "Success") {
-        form.style.display = "none";
-        successBox.style.display = "block";
-        errorBox.style.display = "none";
-        setTimeout(() => { window.close(); }, 5000); // Close window after 5 seconds
-      } else {
-        errorBox.innerText = result;
-        errorBox.style.display = "block";
-        successBox.style.display = "none";
-        setTimeout(() => { errorBox.style.display = "none"; }, 3000); // Hide error after 3 seconds
+      } catch (error) {
+        document.getElementById("loading").style.display = "none";
+        alert("Submission failed. Please try again.");
       }
     });
   </script>
