--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       text-align: center;
       padding: 20px;
       background: #f0f0f0;
+      margin: 0;
     }
     .logo {
       max-width: 200px;
@@ -17,6 +18,11 @@
     }
     h1 {
       color: #4CAF50;
+      font-size: 24px;
+    }
+    p {
+      color: #666;
+      font-size: 16px;
     }
     form {
       max-width: 400px;
@@ -30,22 +36,34 @@
       display: block;
       margin: 10px 0 5px;
       text-align: left;
+      font-weight: bold;
+      color: #333;
     }
     input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
+      box-sizing: border-box;
+      font-size: 14px;
+    }
+    input:focus {
+      border-color: #4CAF50;
+      outline: none;
     }
     button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       background: #4CAF50;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       margin-top: 20px;
+      font-size: 16px;
+    }
+    button:hover {
+      background: #45a049;
     }
     #loading {
       font-size: 18px;
@@ -73,6 +91,7 @@
       color: #4CAF50;
       margin-top: 20px;
       display: none;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -105,25 +124,21 @@
         latitude: "N/A",
         longitude: "N/A"
       };
-      console.log("Sending data:", formData); // Debug: Log data being sent
+      console.log("Sending data:", formData);
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbz64Vk4hs3hLeRP5jF3d4Hx4HapFCz5AOrCHYfkw0Dw9HSjT52uYci14lH8wNeIeEEp/exec", {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec", {
           method: "POST",
+          mode: "no-cors", // Workaround for CORS
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(formData)
         });
-        const result = await response.text();
-        console.log("Server response:", result); // Debug: Log server response
+        console.log("Request sent successfully (no-cors mode)");
         document.getElementById("loading").style.display = "none";
-        if (result === "Success") {
-          document.getElementById("leadForm").style.display = "none";
-          document.getElementById("message").innerText = "THANK YOU";
-          document.getElementById("message").style.display = "block";
-        } else {
-          alert("Error from server: " + result);
-        }
+        document.getElementById("leadForm").style.display = "none";
+        document.getElementById("message").innerText = "THANK YOU";
+        document.getElementById("message").style.display = "block";
       } catch (error) {
-        console.error("Fetch error:", error); // Debug: Log fetch errors
+        console.error("Fetch error:", error);
         document.getElementById("loading").style.display = "none";
         alert("Submission failed: " + error.message + ". Please check your connection or try again.");
       }
