--- a/index.html
+++ b/index.html
@@ -6,141 +6,127 @@
   <title>Sid’s Farm - Free Milk Sample</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
-      background: #f0f0f0;
-      margin: 0;
-    }
-    .logo {
-      max-width: 200px;
-      margin-bottom: 20px;
+      background-color: #f0f0f0;
     }
     h1 {
-      color: #4CAF50;
-      font-size: 24px;
+      color: #2e7d32;
+      font-size: 28px;
     }
     p {
-      color: #666;
+      color: #495057;
       font-size: 16px;
+      margin-bottom: 20px;
     }
     form {
       max-width: 400px;
       margin: 0 auto;
       padding: 20px;
-      background: white;
+      background: #fff;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
     label {
       display: block;
-      margin: 10px 0 5px;
       text-align: left;
+      margin: 10px 0 5px;
+      color: #343a40;
       font-weight: bold;
-      color: #333;
     }
     input {
       width: 100%;
       padding: 10px;
+      font-size: 14px;
       border: 1px solid #ccc;
       border-radius: 5px;
       box-sizing: border-box;
-      font-size: 14px;
-    }
-    input:focus {
-      border-color: #4CAF50;
-      outline: none;
     }
     button {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       background: #4CAF50;
-      color: white;
+      color: #fff;
       border: none;
       border-radius: 5px;
-      cursor: pointer;
-      margin-top: 20px;
       font-size: 16px;
+      cursor: pointer;
+      margin-top: 15px;
     }
-    button:hover {
-      background: #45a049;
+    button:disabled {
+      background: #cccccc;
+      cursor: not-allowed;
     }
-    #loading {
-      font-size: 18px;
-      color: #4CAF50;
-      margin-top: 20px;
-      display: none;
-    }
-    #loading .dots {
+    .loading {
       display: inline-block;
-      width: 20px;
-      text-align: left;
+      margin-left: 10px;
+      font-size: 14px;
     }
-    #loading .dots::after {
-      content: "...";
-      animation: dots 1.5s infinite;
-    }
-    @keyframes dots {
-      0% { content: ""; }
-      33% { content: "."; }
-      66% { content: ".."; }
-      100% { content: "..."; }
-    }
-    #message {
-      font-size: 24px;
-      color: #4CAF50;
-      margin-top: 20px;
-      display: none;
-      font-weight: bold;
+    .logo {
+      max-width: 150px;
+      margin-bottom: 15px;
     }
   </style>
 </head>
 <body>
   <img src="https://raw.githubusercontent.com/koushik30032025/sidsfarm-leads/main/sidsfarm-logo.png" alt="Sid’s Farm Logo" class="logo">
   <h1>Welcome to Sid’s Farm!</h1>
-  <p>Fill in your details for a free milk sample.</p>
+  <p>Enter your details for a free milk sample.</p>
   <form id="leadForm">
     <label for="name">Name *</label>
     <input type="text" id="name" name="name" required>
-    <label for="mobile">Mobile Number (10 digits) *</label>
+    <label for="mobile">Mobile (10 digits) *</label>
     <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
     <label for="community">Community Name *</label>
     <input type="text" id="community" name="community" required>
-    <label for="dob">Date of Birth (Optional)</label>
+    <label for="dob">Date of Birth</label>
     <input type="date" id="dob" name="dob">
-    <button type="submit">Submit</button>
+    <button type="submit" id="submitButton">Submit</button>
+    <span id="loading" class="loading" style="display: none;">Processing...</span>
   </form>
-  <div id="loading">Submitting<span class="dots"></span></div>
-  <div id="message"></div>
   <script>
-    document.getElementById("leadForm").addEventListener("submit", async (e) => {
+    const form = document.getElementById("leadForm");
+    const submitButton = document.getElementById("submitButton");
+    const loading = document.getElementById("loading");
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      document.getElementById("loading").style.display = "block";
-      const formData = {
-        name: document.getElementById("name").value,
-        mobile: document.getElementById("mobile").value,
-        community: document.getElementById("community").value,
-        dob: document.getElementById("dob").value || "N/A",
-        latitude: "N/A",
-        longitude: "N/A"
-      };
-      console.log("Sending data:", formData);
+      submitButton.disabled = true;
+      loading.style.display = "inline-block";
+
+      const name = document.getElementById("name").value.trim();
+      const mobile = document.getElementById("mobile").value.trim();
+      const community = document.getElementById("community").value.trim();
+      const dob = document.getElementById("dob").value || "N/A";
+
+      console.log("Form data:", { name, mobile, community, dob });
+
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec", {
+        const res = await fetch("https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec", {
           method: "POST",
-          mode: "no-cors", // Workaround for CORS
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(formData)
+          body: JSON.stringify({ name, mobile, community, dob })
         });
-        console.log("Request sent successfully (no-cors mode)");
-        document.getElementById("loading").style.display = "none";
-        document.getElementById("leadForm").style.display = "none";
-        document.getElementById("message").innerText = "THANK YOU";
-        document.getElementById("message").style.display = "block";
-      } catch (error) {
-        console.error("Fetch error:", error);
-        document.getElementById("loading").style.display = "none";
-        alert("Submission failed: " + error.message + ". Please check your connection or try again.");
+
+        console.log("Fetch response status:", res.status);
+        const result = await res.text();
+        console.log("Fetch result:", result);
+
+        if (result === "Success") {
+          alert("Thank you! Your details have been submitted successfully.");
+          form.reset();
+        } else if (result === "Duplicate") {
+          alert("This mobile number has already been submitted. Please use a different number.");
+        } else {
+          alert("There was an issue submitting your details. Please try again.");
+        }
+      } catch (err) {
+        console.error("Fetch error:", err.message);
+        alert("Network error, please check your connection and try again.");
+      } finally {
+        submitButton.disabled = false;
+        loading.style.display = "none";
       }
     });
   </script>
