--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
       max-width: 150px;
       margin-bottom: 15px;
     }
+    .error-message {
+      color: #dc3545;
+      font-size: 14px;
+      margin-top: 10px;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -84,16 +90,19 @@
     <input type="date" id="dob" name="dob">
     <button type="submit" id="submitButton">Submit</button>
     <span id="loading" class="loading" style="display: none;">Processing...</span>
+    <div id="errorMessage" class="error-message"></div>
   </form>
   <script>
     const form = document.getElementById("leadForm");
     const submitButton = document.getElementById("submitButton");
     const loading = document.getElementById("loading");
+    const errorMessage = document.getElementById("errorMessage");
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       submitButton.disabled = true;
       loading.style.display = "inline-block";
+      errorMessage.style.display = "none";
 
       const name = document.getElementById("name").value.trim();
       const mobile = document.getElementById("mobile").value.trim();
@@ -101,6 +110,7 @@
       const dob = document.getElementById("dob").value || "N/A";
 
       console.log("Form data:", { name, mobile, community, dob });
+      console.log("Sending to URL:", "https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec");
 
       try {
         const res = await fetch("https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec", {
@@ -119,11 +129,13 @@
         } else if (result === "Duplicate") {
           alert("This mobile number has already been submitted. Please use a different number.");
         } else {
-          alert("There was an issue submitting your details. Please try again.");
+          throw new Error("Unexpected response: " + result);
         }
       } catch (err) {
         console.error("Fetch error:", err.message);
-        alert("Network error, please check your connection and try again.");
+        errorMessage.textContent = "Error: " + err.message + ". Please try again or contact support.";
+        errorMessage.style.display = "block";
+        alert("Network or server error. Please check your connection or try again later. Details: " + err.message);
       } finally {
         submitButton.disabled = false;
         loading.style.display = "none";
