--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       console.log("Sending to URL:", "https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec");
 
       try {
-        const res = await fetch("https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, mobile, community, dob })
-        });
+        const res = await fetch("https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbzrsfn8nmZkKoZRpreHaz2IbGwLmNZvvlQ3CF9on3QdKISKN5bKqSmWR1Zfkjo5czYu/exec", {
+  method: "POST",
+  headers: { "Content-Type": "application/json", "Origin": "https://koushik30032025.github.io" },
+  body: JSON.stringify({ name, mobile, community, dob })
+});
 
         console.log("Fetch response status:", res.status);
         const result = await res.text();
